sfSandBoxCode/force-app/main/default/objects/Employee_Training_Programme__c/Employee_Training_Programme__c.object-meta.xml
<CustomObject>
    <description>Employee Training Programme</description>
    <label>Employee Training Programme</label>
    <nameField>
        <displayFormat>ETR-{0000000}</displayFormat>
        <label>Training Programme Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Training Programmes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>