sfSandBoxCode/force-app/main/default/objects/Employee_Training_Programme__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR Policy Training</fullName>
            </value>
            <value>
                <fullName>Professional Training</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Soft Skills</fullName>
            </value>
            <value>
                <fullName>Product knowledge</fullName>
            </value>
            <value>
                <fullName>Technical Competence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>