sfSandBoxCode/force-app/main/default/objects/Employee_Training_Programme__c/fields/Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Link_URL__c</fullName>
    <description>URL to more programme info</description>
    <inlineHelpText>URL to more programme info</inlineHelpText>
    <label>Link URL</label>
    <type>Url</type>
</CustomField>