sfSandBoxCode/force-app/main/default/objects/Employee_Training_Programme__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Programme Title</description>
    <inlineHelpText>Programme Title</inlineHelpText>
    <label>Programme Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>