sfSandBoxCode/force-app/main/default/objects/Employee_Training_Programme__c/fields/Programme_Description__c.field-meta.xml
<CustomField>
    <fullName>Programme_Description__c</fullName>
    <description>Programme Description</description>
    <inlineHelpText>Programme Description</inlineHelpText>
    <label>Programme Description</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>