sfSandBoxCode/force-app/main/default/objects/Employee_Training_Programme__c/fields/Programme_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Programme_Frequency__c</fullName>
    <description>Programme Frequency</description>
    <inlineHelpText>Programme Frequency</inlineHelpText>
    <label>Programme Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One time</fullName>
            </value>
            <value>
                <fullName>Renewing</fullName>
            </value>
            <value>
                <fullName>Every 2 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>