sfSandBoxCode/force-app/main/default/objects/Employee_Training_Programme__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Link_URL__c</columns>
    <columns>Mandatory__c</columns>
    <columns>Programme_Description__c</columns>
    <columns>Programme_Frequency__c</columns>
    <columns>Name__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>